@@ -37,7 +37,7 @@ requires:
   perl: 5.8.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Map-Tube-Text-Table
-  homepage: https://github.com/tupinek/Map-Tube-Text-Table
+  homepage: https://github.com/michal-josef-spacek/Map-Tube-Text-Table
   license: http://opensource.org/licenses/artistic-license-2.0.php
-  repository: git://github.com/tupinek/Map-Tube-Text-Table
+  repository: git://github.com/michal-josef-spacek/Map-Tube-Text-Table
 version: '0.05'
