@@ -24,8 +24,8 @@ requires 'Text::UnicodeBox::Control' => 0;
 requires 'perl' => '5.8.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Map-Tube-Text-Table';
-resources 'homepage' => 'https://github.com/tupinek/Map-Tube-Text-Table';
-resources 'repository' => 'git://github.com/tupinek/Map-Tube-Text-Table';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Map-Tube-Text-Table';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Map-Tube-Text-Table';
 test_requires 'English' => 0;
 test_requires 'File::Object' => 0.08;
 test_requires 'Test::More' => 0;
