@@ -152,7 +152,7 @@ SEE ALSO
         Install the Map::Tube concrete metro modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Map-Tube-Text-Table>
+    <https://github.com/michal-josef-spacek/Map-Tube-Text-Table>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
