@@ -345,7 +345,7 @@ Install the Map::Tube concrete metro modules.
 
 =head1 REPOSITORY
 
-L<https://github.com/tupinek/Map-Tube-Text-Table>
+L<https://github.com/michal-josef-spacek/Map-Tube-Text-Table>
 
 =head1 AUTHOR
 
